@@ -1,3 +1,10 @@
+2018-04-24  Mark Wielaard  <mark@klomp.org>
+
+	* readelf.c (print_debug_str_section): Take raw section data. Don't
+	use dwarf_getstring, but determine start and end of string from
+	offset and section data directly.
+	(print_debug): Handle ".debug_line_str" like ".debug_str".
+
 2018-04-19  Andreas Schwab  <schwab@suse.de>
 
 	* elflint.c (valid_e_machine): Add EM_RISCV.
